# insider-alerts

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/agents/: coderabbit-pr-review-loop.md
docs/deployment/: DEPLOYMENT.md
docs/runbook/: BACKTESTING.md  OPERATIONS.md
docs/security/: THREAT_MODEL.md
docs/sprints/: README.md  SPRINT-02-REVIEW.md  SPRINT-03-REVIEW.md  SPRINT-04-REVIEW.md  SPRINT-05-REVIEW.md  SPRINT-06-REVIEW.md  SPRINT-07-REVIEW.md  SPRINT-08-REVIEW.md
ops/quant-insider-workspace/: AGENTS.md
ops/windows/: README.md  install-autopilot-task.ps1  run-insider-autopilot-hidden.ps1  run-insider-autopilot.cmd
skills/insider-review/: SKILL.md
skills/ntfy-notify/: SKILL.md
src/insider_alerts/: __init__.py  cli.py  config.py
src/insider_alerts/backtest/: __init__.py  data.py  engine.py  models.py  prices.py
src/insider_alerts/notify/: __init__.py  ntfy.py
src/insider_alerts/review/: __init__.py  decision.schema.json  market_context.py  queue.py  (+1 more)
tests/: fixtures_filing_detail.html  fixtures_form4.xml  fixtures_form4_atom.xml  fixtures_form4_rss.xml  test_backtest_data.py  test_backtest_engine.py  test_backtest_prices.py  test_cli_extended.py  test_cli_help.py  test_cli_notify.py  test_cli_review.py  test_cli_sec.py  test_config.py  test_ntfy.py  test_review_market_context.py  test_review_queue.py  test_review_scoring.py  test_sec_client.py  test_sec_form4_parser.py  test_sec_index.py  test_sec_pipeline.py  test_sec_pipeline_extended.py  test_sec_rss.py  test_sec_store.py  test_sec_store_extended.py
(+8 files in other folders)
