[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "insider-alerts"
version = "0.1.0"
description = "Insider alerts CLI and notification tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Insider Alerts" }]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.2,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-httpx>=0.30,<1.0",
  "coverage[toml]>=7.4,<8.0",
  "ruff>=0.6,<1.0",
  "black>=24.4,<26.0",
  "mypy>=1.10,<2.0",
]

[project.scripts]
insider-alerts = "insider_alerts.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.coverage.run]
branch = true
source = ["insider_alerts"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
